# Easy-Search-Rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-MPL-2.0  PROGRESS.md  README.md  build.ps1  build_err.txt  build_out.txt  build_test_out.txt  build_test_out2.txt  dev.bat  run_sampler.bat  rust-toolchain.toml  test-cli.ps1  usn_cpu_probe.ps1  usn_cpu_results.txt
.cargo/: config.toml
.kiro/specs/bounded-history-persistence/: .config.kiro  design.md  requirements.md  tasks.md
_unused/uffs-polars/: Cargo.toml
_unused/uffs-text/: Cargo.toml
crates/app/: Cargo.toml  build.rs  generate_icon.ps1
crates/app/src/: main.rs  process_hardening.rs
crates/app/src/i18n/: engine.rs  legacy.rs  mod.rs
crates/app/src/i18n/locales/: en.json  ja.json  zh-CN.json
crates/app/src/search/: action.rs  app_state.rs  cache_actions.rs  clipboard.rs  context.rs  engine_bridge.rs  execution.rs  fs_actions.rs  history.rs  icon.rs  input.rs  key_command.rs  layout.rs  messages.rs  mod.rs  pinyin.rs  plugin_bridge.rs  preview.rs  render_bridge.rs  renderer.rs  search_flow.rs  settings_sync.rs  shell_context_menu.rs  visibility.rs  window.rs
crates/app/src/settings/: app.rs  mod.rs
crates/app/src/settings/view_models/: mod.rs  page_general.rs  page_hotkey.rs  page_plugin.rs  page_theme.rs
crates/app/src/settings/views/: page_about.rs  page_general.rs  page_hotkey.rs  page_plugin.rs  page_theme.rs
crates/app/src/shared/: autostart.rs  hotkey.rs  icon_assets.rs  mod.rs  settings_channel.rs  settings_store.rs  tray.rs
crates/app/src/theme/: engine.rs  legacy.rs  mod.rs
crates/app/src/theme/themes/: base.json  win11_dark.json
crates/app/src/welcome/: app.rs  mod.rs  state.rs
crates/app/src/welcome/pages/: page_features.rs  page_finish.rs  page_hotkey.rs  page_theme.rs  page_welcome.rs
crates/core/: Cargo.toml
crates/core/src/: audit_tests.rs  builder.rs  cache.rs  cache_header.rs  context_labels.rs  delta.rs  error.rs  index.rs  lib.rs  logging.rs  path.rs  paths.rs  plugin.rs  usn.rs
crates/core/src/search/: fold.rs  mod.rs  postings.rs  trigram.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: cli.rs  config.rs  error.rs  ipc.rs  process_lifetime.rs  protocol.rs  service.rs  usn_source.rs
crates/easysearch/: Cargo.toml
crates/easysearch-core/src/: audit_tests.rs  delta.rs  error.rs  index.rs  lib.rs  plugin.rs  record.rs  status.rs
crates/easysearch-core/src/search/: mod.rs  prefix.rs
crates/easysearch-engine/: Cargo.toml
crates/easysearch-engine/src/: event.rs  metrics.rs  query.rs
crates/easysearch-gui/: Cargo.toml
crates/easysearch-gui/src/: ipc_client.rs  main.rs
crates/easysearch-gui/src/i18n/: engine.rs  mod.rs
crates/easysearch-gui/src/i18n/locales/: ja.json
crates/easysearch-gui/src/search/: action.rs  icon.rs  layout.rs  mod.rs  preview.rs  renderer.rs  window.rs
crates/easysearch-gui/src/settings/: app.rs  mod.rs
crates/easysearch-gui/src/settings/view_models/: mod.rs  page_about.rs  page_plugin.rs
crates/easysearch-gui/src/settings/views/: mod.rs  page_general.rs  page_hotkey.rs  page_plugin.rs
crates/easysearch-gui/src/shared/: autostart.rs  hotkey.rs  settings_channel.rs
crates/easysearch-gui/src/theme/: engine.rs  mod.rs  types.rs
crates/easysearch-gui/src/theme/themes/: win11_light.json
crates/easysearch-gui/src/welcome/: app.rs
crates/easysearch-mft/: Cargo.toml
crates/easysearch-mft/src/index/: merge.rs
crates/easysearch-mft/src/reader/: persistence.rs  usn_apply.rs
crates/easysearch-security/: Cargo.toml
crates/easysearch/src/: cli.rs  drive_manager.rs  main.rs  service.rs  usn_source.rs
crates/engine/: Cargo.toml
crates/engine-test-cli/: Cargo.toml
crates/engine-test-cli/src/: main.rs
crates/engine/examples/: poll_probe.rs
crates/engine/src/: config.rs  drive_manager.rs  event.rs  lib.rs  query.rs  search_session.rs  usn_source.rs
crates/engine/tests/: integration.rs
crates/mft/: Cargo.toml
crates/mft/src/: cache.rs  cache_dataframe.rs  error.rs  lib.rs  main.rs  raw_iocp.rs  reader.rs
crates/mft/src/commands/: inspect.rs  load.rs  mod.rs
crates/mft/src/commands/windows/: read.rs
crates/mft/src/index/: builder.rs  dataframe.rs  tests_children.rs
crates/mft/src/ntfs/: tests.rs
crates/mft/src/parse/: tests.rs
crates/mft/src/platform/: drive_letter.rs  extents.rs  upcase.rs  volume.rs
crates/mft/src/raw/: mod.rs
crates/mft/src/reader/: dataframe_build.rs  dataframe_read.rs  dataframe_timing.rs  index_read.rs  persistence.rs
crates/mft/src/reader/multi_drive/: dataframe.rs  mod.rs
crates/mft/src/usn/: windows.rs
crates/plugins/plugin-bookmark/: Cargo.toml
crates/plugins/plugin-bookmark/src/: chromium.rs  firefox.rs  lib.rs
crates/plugins/plugin-file-search/: Cargo.toml
crates/plugins/plugin-file-search/src/: lib.rs
crates/plugins/plugin-indicator/: Cargo.toml
crates/plugins/plugin-indicator/src/: lib.rs
crates/plugins/plugin-process-killer/src/: native.rs
crates/plugins/plugin-program/: Cargo.toml
crates/plugins/plugin-program/src/: cache.rs  fuzzy.rs  lib.rs  scanner.rs  settings.rs  uwp.rs
crates/plugins/plugin-quick-launch/: Cargo.toml
crates/plugins/plugin-quick-launch/src/: lib.rs
crates/plugins/plugin-shell/: Cargo.toml
crates/plugins/plugin-sys-cmd/: Cargo.toml
crates/plugins/plugin-sys-cmd/src/: lib.rs
crates/plugins/plugin-web-search/: Cargo.toml
crates/plugins/plugin-web-search/src/: lib.rs
crates/plugins/plugin-win-settings/: Cargo.toml
crates/plugins/plugin-win-settings/src/: lib.rs  translations_ja.json  translations_zh.json
crates/quick-launch-store/: Cargo.toml
crates/quick-launch-store/src/: lib.rs
crates/security/: Cargo.toml
crates/uffs-polars/: Cargo.toml
crates/uffs-text/: Cargo.toml
docs/: ARCHITECTURE_REFACTOR.md
不要文件/plugin-calculator/: Cargo.toml
不要文件/plugin-calculator/src/: lib.rs
不要文件/plugin-process-killer/: Cargo.toml
不要文件/plugin-process-killer/src/: lib.rs
不要文件/plugin-shell/src/: history.rs  lib.rs  settings.rs
不要文件/plugin-url/: Cargo.toml
不要文件/plugin-url/src/: lib.rs
(+5 files in other folders)
