[workspace]
resolver = "3"
members = [
    "crates/quick-launch-store",
    # ── 核心库 ──
    "crates/core",              # 索引/缓存/搜索算法
    "crates/engine",            # 嵌入式搜索引擎（多盘符、USN、事件通道）
    "crates/mft",               # NTFS MFT/USN 底层解析
    "crates/security",          # 安全模块（ACL/AES-GCM/Authenticode）

    # ── 二进制 ──
    "crates/app",               # ★ 主程序（前后端一体化单 exe，产物名: easysearch.exe）
    # "crates/daemon",          # 独立守护进程（已废弃，功能已内嵌到 app）

    # 原 `_unused` 辅助 crate 已合并到 `crates/mft`。

    # ── 插件 ──
    "crates/plugins/plugin-bookmark",
    "crates/plugins/plugin-program",
    "crates/plugins/plugin-sys-cmd",
    "crates/plugins/plugin-win-settings",
    "crates/plugins/plugin-file-search",
    "crates/plugins/plugin-indicator",
    "crates/plugins/plugin-quick-launch",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["LIJIALU"]
publish = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
