[package]
name = "easysearch"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "easysearch"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-numerics = "0.3"
easysearch-core = { path = "../core" }
easysearch-engine = { path = "../engine" }
quick-launch-store = { path = "../quick-launch-store" }
plugin-bookmark = { path = "../plugins/plugin-bookmark" }
plugin-program = { path = "../plugins/plugin-program" }
plugin-sys-cmd = { path = "../plugins/plugin-sys-cmd" }
plugin-win-settings = { path = "../plugins/plugin-win-settings" }
plugin-file-search = { path = "../plugins/plugin-file-search" }
plugin-indicator = { path = "../plugins/plugin-indicator" }
plugin-quick-launch = { path = "../plugins/plugin-quick-launch" }

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Com",
    "Win32_UI_Input_Ime",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell_Common",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Shutdown",
    "Win32_System_Power",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_Registry",
    "Win32_System_Time",
] }
