[package]
name = "easysearch-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }

[dev-dependencies]
tempfile = "3"
