[package]
name = "easysearch-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
easysearch-core = { path = "../core" }

[target.'cfg(windows)'.dependencies]
uffs-mft = { package = "easysearch-mft", path = "../mft" }
easysearch-security = { path = "../security" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
