[package]
name = "plugin-process-killer"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
easysearch-core = { path = "../../easysearch-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
